# react-echarts-graph

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: graph_data.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.js
frontend/src/components/: EChartsGraph.js  EditLinkModal.js  EditNodeModal.js
frontend/src/data/: graphData.js
frontend/src/styles/: App.css
src/: App.css  App.js
src/components/: EChartsGraph.js
src/data/: graphData.js  graphData1.js
