[tool.poetry]
name = "graphdata"
version = "0.1.0"
description = "backend to provide and receive graph data from react/echart frontend"
authors = ["Robert Alexander <gogonegro@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
js2py = "^0.74"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
